--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "leaflet": "^1.9.4",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "query-string": "^8.1.0",
@@ -26,11 +27,15 @@
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
     "typescript": "5.0.2",
+    "world-countries": "^5.0.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.8",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "prisma": "^5.7.1",
