--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.0.6",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "leaflet": "^1.9.4",
